tests/declare_module_exports/declare_module_exports.exp
Library lint error (deprecated-declare-exports):
flow-typed/libs.js:21
 21:   declare var exports: number;
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ deprecated-declare-exports: Deprecated syntax. Use `declare module.exports` instead.

Error: main.js:5
  5: (declare_module_exports: string); // Error: number ~> string
      ^^^^^^^^^^^^^^^^^^^^^^ Cannot cast `declare_module_exports` to string because number [1] is incompatible with string [2].
  References:
    5: (declare_module_exports: string); // Error: number ~> string
        ^^^^^^^^^^^^^^^^^^^^^^ [1]: number
    5: (declare_module_exports: string); // Error: number ~> string
                                ^^^^^^ [2]: string

Error: main.js:8
  8: import {str} from "declare_m_e_with_other_value_declares";
             ^^^ Named import from module `declare_m_e_with_other_value_declares`. This module only has a default export. Did you mean `import str from ...`?

Error: main.js:12
 12: (42: str2); // Error: number ~> string
      ^^ Cannot cast `42` to `str2` because number [1] is incompatible with string [2].
  References:
   12: (42: str2); // Error: number ~> string
        ^^ [1]: number
   12: (42: str2); // Error: number ~> string
            ^^^^ [2]: string

Error: main.js:21
 21: (DEPRECATED__declare_var_exports: string); // Error: number ~> string
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Cannot cast `DEPRECATED__declare_var_exports` to string because number [1] is incompatible with string [2].
  References:
   21: (DEPRECATED__declare_var_exports: string); // Error: number ~> string
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]: number
   21: (DEPRECATED__declare_var_exports: string); // Error: number ~> string
                                         ^^^^^^ [2]: string

Error: main.js:25
 25: (declare_m_e_with_declare_var_e: string); // Error: number ~> string
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Cannot cast `declare_m_e_with_declare_var_e` to string because number [1] is incompatible with string [2].
  References:
   25: (declare_m_e_with_declare_var_e: string); // Error: number ~> string
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]: number
   25: (declare_m_e_with_declare_var_e: string); // Error: number ~> string
                                        ^^^^^^ [2]: string


Found 6 errors
